maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: not found: value isOverBaggel
  while(!isOverBaggel()){
         ^Escaper:12: error: not found: value pickupBaggel
  pickupBaggel()
  ^