maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!isFacingWall()){
    left()
  }
  while(!isOverBaggel()){
    while(isFacingWall()){
      left()
    }
    forward()
    right()
  }
  pickupBaggel()
}